<resources>
    <string name="app_name">2 Meet Me</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="btn_account">ACCOUNT</string>
    <string name="str_nav_setting">SETTINGS</string>
    <string name="press_again_exit_app">Press again to exit</string>
    <string name="str_logout">DISCONNECT</string>
    <string name="str_login">LOGIN</string>
    <string name="str_home">IN A MAP</string>
    <string name="default_format">###,##0.00</string>
    <string name="default_decimal_separator">\'</string>
    <string name="icon">icon</string>
    <string name="clock">clock</string>
    <string name="Coupon">COUPONS</string>
    <string name="Business">BUSINESSES</string>
    <string name="retry">No connection, retry</string>
    <string name="error_retry">An error has ocurred, retry</string>
    <string name="dialog_connection_title">No connection</string>
    <string name="dialog_connection_description">We can not reach our servers at the moment.\n\nYou can always check you favorites and other items using the menu!</string>
    <string name="dialog_internet_title">No internet</string>
    <string name="dialog_internet_description">You seem to have no internet connection, this app requires internet to get the latest content.\n\nYou can continue offline!</string>
    <string name="ok">Ok</string>
    <string name="owner">Owner</string>
    <string name="placeholder_empty">No business found</string>
    <string name="global_map_fail_toast">You device does not support map</string>
    <string name="menu_layers">Layers</string>
    <string name="menu_layers_normal">Normal</string>
    <string name="menu_layers_satellite">Satellite</string>
    <string name="menu_layers_hybrid">Hybrid</string>
    <string name="menu_layers_terrain">Terrain</string>
    <string name="action_search">Search</string>
    <string name="unit_meter">m</string>
    <string name="unit_kilometer">km</string>
    <string name="unit_mile">mi</string>
    <string name="fragment_business_detail_info_title">Information</string>
    <string name="fragment_poi_detail_description_title">Description</string>
    <string name="images">Images</string>
    <string name="favorites">FAVORITES BUSINESSES</string>
    <string name="notification">Notification</string>
    <string name="speak_now">Speak now</string>
    <string name="font_title">Knockout-29.otf</string>
    <string name="filter">DONE</string>
    <string name="businesses">BUSINESSES</string>
    <string name="patio_take_picture">New</string>
    <string name="patio_attach_picture">Attach</string>
    <string name="patio_remove_picture">Remove</string>
    <string name="patio_action_cancel">Cancel</string>
    <string name="patio_thumbnails_message">%1$d de %2$d added images</string>
    <string name="pick_start_date_time_business">SET START BUSINESS DATE AND TIME</string>
    <string name="business_information">Business Contact Information</string>
    <string name="business_address">Business Address</string>
    <string name="business_description">Business Information</string>
    <string name="business_picture">BUSINESS PICTURES</string>
    <string name="createreview">POST A REVIEW</string>
    <string name="post">POST</string>
    <string name="youtube_video_url" />
    <string name="add_video_url">Youtube video URL</string>
    <string name="input_add_youtube">Please add your youtube video url</string>
    <string name="add">Add</string>
    <string name="Success">Success!</string>
    <string name="Loading">Authenticating</string>
    <string name="Created">User Created</string>
    <string name="Creating">Creating</string>
    <string name="you_are_business_owner">You are business owner?</string>
    <string name="check_to_pass">I accept terms and conditions.</string>
    <string name="error_message">Please accept terms and conditions first.</string>
    <string name="lorem_ipsum">Lorem ipsum \n\ndolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure</string>
    <string name="intro_near_me_tittle">NEAR ME</string>
    <string name="intro_near_me">Discover local businesses around your current location. Just tab on the pin you are interested in and you will see their Local Big App page where you will find more information including pictures, coupons, events and contact information.</string>
    <string name="intro_near_me_for_business_tittle">FOR BUSINESSES OWNERS</string>
    <string name="intro_favorites_business">This will keep you up to date with coupons and events from the businesses you love!</string>
    <string name="intro_events">Keep your calendar full with all the entertaining events local businesses host.</string>
    <string name="intro_events_for_business">Update your customers with all the great events your business offers.  Add pictures and be very descriptive with what makes you event special!</string>
    <string name="intro_coupons">Save money and get great value by using the coupons local businesses offer.</string>
    <string name="intro_coupons_for_business">Attract new costumers with irresistible deals!</string>
    <string name="intro_account_for_business">Create an account to manage your business profile, upload pictures, create events and coupons. You can also stay updated with other local businesses in your area.</string>
    <string name="str_names">First Name</string>
    <string name="str_last_names">Last Name</string>
    <string name="str_mobile">Mobile Phone</string>
    <string name="str_password">Password</string>
    <string name="str_re_password">Re-enter Password</string>
    <string name="demo">Demo Business</string>
    <string name="business_detail_description">DESCRIPTION</string>
    <string name="business_detail_address">ADDRESSES</string>
    <string name="business_detail_reviews">REVIEWS</string>
    <string name="less">Less</string>
    <string name="more">More</string>
    <string name="business_schedule">WORK SCHEDULE</string>
    <string name="business_detail_promo">PROMOTIONS</string>

</resources>
