<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_menu_layers"
        android:orderInCategory="1"
        android:title="@string/menu_layers"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_layers_normal"
                android:icon="@null"
                android:orderInCategory="1"
                android:title="@string/menu_layers_normal" />
            <item
                android:id="@+id/menu_layers_satellite"
                android:icon="@null"
                android:orderInCategory="2"
                android:title="@string/menu_layers_satellite" />
            <item
                android:id="@+id/menu_layers_hybrid"
                android:icon="@null"
                android:orderInCategory="3"
                android:title="@string/menu_layers_hybrid" />
            <item
                android:id="@+id/menu_layers_terrain"
                android:icon="@null"
                android:orderInCategory="4"
                android:title="@string/menu_layers_terrain" />
        </menu>
    </item>

</menu>
