<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/global_bg_front"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/elevation_card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="@dimen/global_spacing_xxs"
            android:text="@string/fragment_poi_detail_description_title"
            android:textAppearance="@style/TextAppearance.LocalBigApp.Headline" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/dividerHorizontal" />

        <com.app.tomeetme.view.widget.TextViewExpandableAnimation
            android:id="@+id/fragment_poi_detail_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/global_spacing_xs"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/material_grey_800"
            android:textStyle="normal"
            app:tvea_expandBitmap="@drawable/icon_arrow_down"
            app:tvea_expandLines="3"
            app:tvea_shrinkBitmap="@drawable/icon_arrow_up"
            app:tvea_textContentColor="@color/color_gray_light_content_text"
            app:tvea_textContentSize="16dp"
            app:tvea_textExpand="@string/more"
            app:tvea_textShrink="@string/less"
            app:tvea_textStateColor="@color/colorPrimary" />

    </LinearLayout>
</android.support.v7.widget.CardView>
